footer-responsive-fixes-spacing

--- a/style.css
+++ b/style.css
@@ -1268,7 +1268,7 @@ body {
     list-style: none;
     text-align: left;
     margin: 0;
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
